# firepup650-PYPI

./: .gitignore  .replit  .replit.backup  main.py  pyproject.toml  replit.nix
package/: README.md  pyproject.toml  requirements.txt  setup.cfg  upload.sh
package/src/firepup650/: __init__.py  __init__.pyi
