[tool.poetry]
name = "firepup650"
version = "1.0.2"
description = "Replit source"
authors = ["Firepup650"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^23.1"
build = "^0.10.0"
twine = "^4.0.2"
fkeycapture = "^1.2.3"
black = "^23.3.0"
keyrings-alt = "^4.2.0"
fpsql = "^1.0.1"
urllib3 = "1.26.16"
mypy = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
