[tool.poetry]
name = "firepup650-source"
version = "1.0.0"
description = "Source"
authors = ["Firepup650"]

[tool.poetry.dependencies]
python = "^3.10.11"
fkeycapture = "^1.2.3"
black = "^24.3.0"
fpsql = "^1.0.1"
mypy = "^1.3.0"

[tool.poetry.dev-dependencies]

[tool.black]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
